--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Web3.loader.js";
+      var loaderUrl = buildUrl + "/webglar.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Web3.data.br",
-        frameworkUrl: buildUrl + "/Web3.framework.js.br",
-        codeUrl: buildUrl + "/Web3.wasm.br",
+        dataUrl: buildUrl + "/webglar.data",
+        frameworkUrl: buildUrl + "/webglar.framework.js",
+        codeUrl: buildUrl + "/webglar.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "arundaya",
         productName: "AR Webb Test",
